deploy: 68905bc7d8449af461a91e0504bb023345e64410

--- a/images/reparametrization.html
+++ b/images/reparametrization.html
@@ -377,12 +377,12 @@ document.write(`
 <span class="n">axs</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">.</span><span class="n">axis</span><span class="p">(</span><span class="s1">&#39;equal&#39;</span><span class="p">)</span>
 
 <span class="n">fig</span><span class="o">.</span><span class="n">tight_layout</span><span class="p">()</span>
-<span class="n">fig</span><span class="o">.</span><span class="n">savefig</span><span class="p">(</span><span class="s1">&#39;reparametrization.jpg&#39;</span><span class="p">,</span><span class="n">bbox_inches</span><span class="o">=</span><span class="s1">&#39;tight&#39;</span><span class="p">)</span>
+<span class="n">fig</span><span class="o">.</span><span class="n">savefig</span><span class="p">(</span><span class="s1">&#39;reparametrization.png&#39;</span><span class="p">,</span><span class="n">bbox_inches</span><span class="o">=</span><span class="s1">&#39;tight&#39;</span><span class="p">,</span><span class="n">dpi</span><span class="o">=</span><span class="mi">300</span><span class="p">)</span>
 </pre></div>
 </div>
 </div>
 <div class="cell_output docutils container">
-<img alt="../_images/4a3f55fac0aa32e80838c6094196e2cbe853365785bb0e99f686f75e5836af59.png" src="../_images/4a3f55fac0aa32e80838c6094196e2cbe853365785bb0e99f686f75e5836af59.png" />
+<img alt="../_images/55e674fe4aec3d35d855d7a96b082ca5fc80f1edc0517d105d368664a2507515.png" src="../_images/55e674fe4aec3d35d855d7a96b082ca5fc80f1edc0517d105d368664a2507515.png" />
 </div>
 </div>
 
